; ModuleID = '/home/carl/AnghaBench/torch7/extr_MemoryFile.c_torch_MemoryFile_new.c'
source_filename = "/home/carl/AnghaBench/torch7/extr_MemoryFile.c_torch_MemoryFile_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"torch.CharStorage\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"rw\00", align 1
@.str.2 = private unnamed_addr constant [17 x i8] c"torch.MemoryFile\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @torch_MemoryFile_new to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @torch_MemoryFile_new(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32* @luaT_toudata(i32* %6, i32 1, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  store i32* %7, i32** %4, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load i32*, i32** %2, align 8
  %12 = call i8* @luaL_optstring(i32* %11, i32 2, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  store i8* %12, i8** %3, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = load i8*, i8** %3, align 8
  %15 = call i32* @THMemoryFile_newWithStorage(i32* %13, i8* %14)
  store i32* %15, i32** %5, align 8
  br label %21

16:                                               ; preds = %1
  %17 = load i32*, i32** %2, align 8
  %18 = call i8* @luaL_optstring(i32* %17, i32 1, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  store i8* %18, i8** %3, align 8
  %19 = load i8*, i8** %3, align 8
  %20 = call i32* @THMemoryFile_new(i8* %19)
  store i32* %20, i32** %5, align 8
  br label %21

21:                                               ; preds = %16, %10
  %22 = load i32*, i32** %2, align 8
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @luaT_pushudata(i32* %22, i32* %23, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0))
  ret i32 1
}

declare dso_local i32* @luaT_toudata(i32*, i32, i8*) #1

declare dso_local i8* @luaL_optstring(i32*, i32, i8*) #1

declare dso_local i32* @THMemoryFile_newWithStorage(i32*, i8*) #1

declare dso_local i32* @THMemoryFile_new(i8*) #1

declare dso_local i32 @luaT_pushudata(i32*, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
